# gmessages_qt

./: .gitignore  .qmlls.ini  AGENTS.md  CMakeLists.txt  Cargo.toml  PKGBUILD  README.md  build.rs  errors.txt  gmessages_qt.desktop  org.kourier.desktop
.agents/workflows/: long_polling_architecture.md
src/: app_state.rs  lib.rs  main.rs
src/app_state/: app_state_impl.rs  conversation_list.rs  message_list.rs  session_controller.rs  shared.rs  utils.rs
src/qml/: LoginDialog.qml  Main.qml  MediaViewerDialog.qml  MessageDelegate.qml  resources.qrc
