[package]
name = "gmessages_qt"
version = "0.1.0"
authors = [ "ripdog" ]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
cxx = "1.0.122"
cxx-qt = "0.8.0"
cxx-qt-lib = { version= "0.8.0", features = ["qt_full"] }
cxx-qt-lib-extras = "0.8.0"
libgmessages-rs = { path = "../libgmessages-rs" }
base64 = "0.22"
chrono = "0.4"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[build-dependencies]
# The link_qt_object_files feature is required for statically linking Qt 6.
cxx-qt-build = { version = "0.8.0", features = [ "link_qt_object_files" ] }
